feat: Darle color al botón

--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-<h1>Hello World</h1>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit consequatur assumenda illo fugiat cumque odit quod nulla commodi magnam eligendi, perferendis quidem! Cupiditate, sequi eaque. Eveniet soluta repellat similique odit.</p>
-<button type="submit" onclick="saludo" value="hola">Botón</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Hello World</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit consequatur assumenda illo fugiat cumque odit quod nulla commodi magnam eligendi, perferendis quidem! Cupiditate, sequi eaque. Eveniet soluta repellat similique odit.</p>
+    <button type="submit" onclick="saludo" value="hola">Botón</button>
+</body>
+</html>
